--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
 </script>
     <div id="results"></div>*@
 <h1>Financial Overview</h1>
+    <label id="error"></label>
 <div data-bind="template: { name: 'summary-template', foreach: accountsSummary }"></div>
 
 <script type="text/html" id="summary-template">
