--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <ul id="menu">
                             <li><a href="~/#summary"> Home</a>
                             </li>
+                            <li>
+                                <a href="~/Transfer.html">Transfer</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
