--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                             <li>
                                 <a href="~/Transfer.html">Transfer</a>
                             </li>
+                            <li>
+                                <a href="~/Branches.html">Locate Us</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
