--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     <title>Accounts Summary</title>
 </head>
 <body>
-    @*Sample Code with JS-Render*@
+    @*Sample Code with JS-Render1111*@
     @*<script id="accountsTemplate" type="text/x-jsrender">
     
     <table style="width: 100%;">
