--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     </table>
 </script>
     <div id="results"></div>*@
-    <h1>Financial Overview</h1>
+    <h1>Financial Overview Page in main</h1>
     <label id="error"></label>
     <script type="text/html" id="summary-template">
         <tr>
